software/experimental/admin-ui/referencegrant.yaml
# ReferenceGrant to allow HTTPRoutes in istio-system to reference services in osdu-experimental namespace
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: admin-ui-reference-grant
  namespace: osdu-experimental
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: istio-system
  to:
  - group: ""
    kind: Service
    name: osdu-experimental-admin-ui
